--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="container">
+		<div class="info"><strong>You have to cross the pavement without touching the bug. If you  touch the bug, number of crosses decreases. As soon as you cross the pavement five times, you win. All the best!!!</strong></div>
+		<div class="showCrosses"></div>
+	</div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
