--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
-	<div class="container">
+	<div>
 		<div class="info"><strong>You have to cross the pavement without touching the bug. If you  touch the bug, number of crosses decreases. As soon as you cross the pavement five times, you win. All the best!!!</strong></div>
 		<div class="showCrosses"></div>
 	</div>
